교제 내용 추가

--- a/Textbook/src/main/webapp/WEB-INF/web.xml
+++ b/Textbook/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
   <servlet>
   	<servlet-name>loginProcess</servlet-name>
   	<servlet-class>com.ssamz.web.user.LoginServlet</servlet-class>
+  	<load-on-startup>1</load-on-startup>
   </servlet>
   
    <servlet-mapping>
